...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        tools:layout_editor_absoluteX="307dp"
        android:visibility="gone"    />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:onClick="onBackClicked"
        android:text="Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_display" />

    <Button
        android:id="@+id/plan_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="41dp"
        android:onClick="onPlanDisplayClicked"
        android:text="Plan Display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mock_location"
        app:layout_constraintTop_toBottomOf="@+id/todo_items" />

    <EditText
        android:id="@+id/x_coor"
        android:layout_width="214dp"
        android:layout_height="39dp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:onClick="onMockLocationClicked"
        android:text="Mock Location"
        app:layout_constraintEnd_toStartOf="@+id/plan_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_items"
        />

    <Button
        android:id="@+id/Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:onClick="ListClear"
...
